# bmaster

./: .gitignore  README.md  cert_setup.py  check_updates.py  listen.html  main.py  pyproject.toml  remote.html  requirements.txt  setup.bat  setup.py  setup.sh  update.py
bmaster/: __init__.py  addons.py  config.py  configroles.py  configs.py  database.py  direct.py  exc.py  lite.py  logs.py  maintenance.py  plugins.py  scheduling.py  server.py  sounds.py
bmaster/api/: __init__.py  certs.py  icoms.py  scripting.py  settings.py  sounds.py
bmaster/api/auth/: __init__.py  accounts.py  hashing.py  permissions.py  service.py  users.py
bmaster/api/icoms/: __init__.py  auth.py  listen.py
bmaster/api/icoms/queries/: __init__.py  audio.py  sound.py  stream.py
bmaster/frontend/: __init__.py  templates.py
bmaster/icoms/: __init__.py  mixer.py  queries.py
bmaster/scripting/: __init__.py  commands.py
bmaster/utils/: __init__.py  aio.py  signals.py
defaults/: config.yml  lite.json
img/: ULTRAKILL.html
plugins/school/: __init__.py  api.py  models.py
static/css/: font-awesome.css  icoicon.css  style2.css  themify-icons.css
static/css/mic/: mic.css
static/js/: bootstrap.bundle.min.js  button.js  wow.min.js
static/js/mic/: listen.js  record.js
templates/: announcements.html  index.html  listen.html  login.html  profile.html  register.html  settings.html  sounds.html
